@@ -8,6 +8,7 @@ CHANGELOG for Fall of Eden
 Version 0.4j
 ------------
 * Fixed a whole lot of bugs in Kiai
+* Fixed a bunch of typos in Kiai, intro Imps. Thanks CalmKhaos!
 * Fixed a bug that would lock out strapon action for Kiai
 * Run is no longer 100% certain. It's based on your level and the level of the encounter (ie the first mob). Debug is always 100%
 * Added a marker for end of current content at the mound
